[package]
name = "vlinder"
version = "0.1.0"
authors = ["Eric Caleb <caleberic@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0"
warp = "0.2"
log = "0.4"
